fix(roles):fixed roles update and roleLevel